# sketch-based-implicit-blending

./: .gitignore  CMakeLists.txt  README.md  classdiagram.qmodel  ebib_demo.pro  ebib_demo_qt.pro  resources.qrc
inc/: BSplineSurface.hpp  CMakeLists.txt  Camera.h  Grid.hpp  MarchingSquares.h  MyGLWidget.h  ObjectScene.hpp  Pipeline.hpp  Processor.hpp  RegistrationProcessor.hpp  Scene.hpp  Template.hpp  TemplateScene.hpp  UserPoints.hpp  Utils.h  camera.hpp  circle.h  inc.pri  input.h  nnsearch.h
inc/objects/: BSplineSurface.hpp  Result.h  Result.hpp  Result3D.h  Template.hpp  UserPoints.hpp  circle.h  circle.hpp  objects.pri  sphere.h
inc/processor/: OperatorGenerator.h  OperatorGenerator.hpp  Pipeline.hpp  RegistrationProcessor.hpp  VolumeGenerator.h  processor.pri
inc/scenes/: ObjectScene.hpp  SynthesisScene.hpp  TemplateScene.hpp  scenes.pri
inc/tools/: MarchingSquares.h  Utils.h  input.h  tools.pri
inc/ui/: GLWidget.h  GLWidget.hpp  MyGLWidget.h  mainwindow.h  mainwindow.hpp  ui.pri
resources/: fs.glsl  fs_synthesis.glsl  vs.glsl  vs_synthesis.glsl
shaders/: CMakeLists.txt  fs.glsl  vs.glsl
src/: BSplineSurface.cpp  CMakeLists.txt  Camera.cpp  Grid.cpp  MarchingSquares.cpp  MyGLWidget.cpp  ObjectScene.cpp  Pipeline.cpp  Processor.cpp  Program.cpp  Scene.cpp  Template.cpp  TemplateScene.cpp  UserPoints.cpp  Utils.cpp  camera.cpp  circle.cpp  input.cpp  main.cpp  shader.cpp  src.pri
src/objects/: BSplineSurface.cpp  Result.cpp  Result3D.cpp  Template.cpp  UserPoints.cpp  circle.cpp  objects.pri  sphere.cpp
src/processor/: OperatorGenerator.cpp  Pipeline.cpp  RegistrationProcessor.cpp  VolumeGenerator.cpp  processor.pri
src/ui/: ui.pri  (+3 more)
ui/: mainwindow.ui  ui.pri
(+9 files in other folders)
